--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.input-box {
+    @apply rounded-md p-3 w-full border border-zinc-200 focus:border-zinc-400 focus:outline-none;
+}
