removed login/signup borders

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,5 +5,5 @@
     @apply rounded-md p-3 w-full border border-zinc-200 focus:border-zinc-400 focus:outline-none;
 }
 .gradient-btn {
-    @apply p-3 rounded-lg text-lg bg-black text-white bg-gradient-to-br from-dk-blue to-blue-900;
+    @apply bg-gradient-to-l from-blue-800 to-blue-500 text-white text-lg py-3 px-6 rounded-lg;
 }
